--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build src/index.html",
-    "start": "parcel src/index.html",
+    "build": "parcel src/index.html",
+    "debug": "netlify dev --inspect",
+    "netlify-dev": "netlify dev",
+    "netlify-link": "netlify link",
+    "start": "parcel src/index.html --port 8888",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,12 +16,22 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@reach/router": "^1.3.4",
+    "dotenv": "^8.2.0",
+    "googleapis": "^39.2.0",
     "leaflet": "^1.7.1",
+    "lodash.camelcase": "^4.3.0",
+    "node-fetch": "^2.6.1",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0"
   },
   "devDependencies": {
+    "netlify-cli": "^3.10.1",
     "parcel-bundler": "^1.12.4"
-  }
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
