--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "debug": "netlify dev --inspect",
     "netlify-dev": "netlify dev",
     "netlify-link": "netlify link",
@@ -21,6 +21,7 @@
     "leaflet": "^1.7.1",
     "lodash.camelcase": "^4.3.0",
     "node-fetch": "^2.6.1",
+    "parcel-plugin-static-files-copy": "^2.5.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -32,5 +33,9 @@
   },
   "browserslist": [
     "last 1 Chrome version"
-  ]
+  ],
+  "staticFiles": {
+    "staticPath": "public",
+    "watcherGlob": "**"
+  }
 }
