--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "debug": "netlify dev --inspect",
     "netlify-dev": "netlify dev",
     "netlify-link": "netlify link",
@@ -21,7 +21,6 @@
     "leaflet": "^1.7.1",
     "lodash.camelcase": "^4.3.0",
     "node-fetch": "^2.6.1",
-    "parcel-plugin-static-files-copy": "^2.5.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -29,7 +28,8 @@
   },
   "devDependencies": {
     "netlify-cli": "^3.10.1",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.1"
   },
   "browserslist": [
     "last 1 Chrome version"
