--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "parcel src/index.html",
+    "build-prod": "parcel build src/index.html",
     "debug": "netlify dev --inspect",
     "netlify-dev": "netlify dev",
     "netlify-link": "netlify link",
     "start": "parcel src/index.html --port 8888",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "functions": "netlify functions list"
   },
   "author": "",
   "license": "ISC",
