--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
+    "d3-scale": "^3.2.3",
     "dotenv": "^8.2.0",
     "leaflet": "^1.7.1",
+    "leaflet.heat": "^0.2.0",
     "lodash.camelcase": "^4.3.0",
     "node-fetch": "^2.6.1",
     "query-string": "^6.14.1",
