--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet": "^1.7.1",
     "leaflet.heat": "^0.2.0",
     "lodash.camelcase": "^4.3.0",
+    "lodash.get": "^4.3.0",
     "node-fetch": "^2.6.1",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
