--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "netlify-link": "netlify link",
     "start": "parcel src/index.html --port 8888",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "functions": "netlify functions list"
+    "functions": "netlify functions list",
+    "lint": "eslint --ignore-path .gitignore \"**/*.{js,jsx}\""
   },
   "author": "",
   "license": "ISC",
