finish lint fixes

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,17 @@
 {
-    "extends": [
-        "airbnb",
-        "airbnb/hooks",
-        "prettier"
-    ],
-    "globals": {
-        "fetch": "readonly",
-        "document": "readonly",
-        "window": "readonly"
-    },
-    "rules": {
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [
-                    ".js",
-                    ".jsx"
-                ]
-            }
-        ]
-    }
+  "extends": ["airbnb", "airbnb/hooks", "prettier"],
+  "globals": {
+    "fetch": "readonly",
+    "localStorage": true,
+    "document": "readonly",
+    "window": "readonly"
+  },
+  "rules": {
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ]
+  }
 }
