--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
+    "@turf/turf": "^6.3.0",
     "d3-scale": "^3.2.3",
     "dotenv": "^8.2.0",
     "leaflet": "^1.7.1",
