--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
     "configurations": [
         {
             "name": "Netlify Debugging",
+            "runtimeVersion": "16.13.1",
             "type": "pwa-node",
             "request": "launch",
             "program": "${workspaceFolder}\\node_modules\\.bin\\netlify",
